Fix crash on tab navigation around buttons in config screen